--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,31 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}@font-face {
+  font-family: 'Ogg';
+  src: url('../public/fonts/Ogg-Roman.woff2') format('woff2'),
+      url('../public/fonts/Ogg-Roman.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
+@font-face {
+  font-family: 'maison_neuemedium';
+  src: url('../public/fonts/maisonneue-medium-webfont.woff2') format('woff2'),
+       url('../public/fonts/maisonneue-medium-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+@font-face {
+  font-family: 'Ogg';
+  src: url('../public/fonts/Ogg-Italic.woff') format('woff2'),
+      url('../public/fonts/Ogg-Italic.woff') format('woff');
+  font-weight: normal;
+  font-style: italic;
+  font-display: swap;
+}
+
 
 a {
   color: inherit;
